appointment/src/objects/Staff_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Thursday_To__c</fullName>
        <label>Thursday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday_Duration__c</fullName>
        <description>The unit of measure for &apos;Duration&apos; is minutes.</description>
        <inlineHelpText>Enter the duration in minutes.</inlineHelpText>
        <label>Tuesday Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday_From_DT__c</fullName>
        <label>Tuesday From DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tuesday_From__c</fullName>
        <label>Tuesday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tuesday_To_DT__c</fullName>
        <label>Tuesday To DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tuesday_To__c</fullName>
        <label>Tuesday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday_Duration__c</fullName>
        <description>The unit of measure for &apos;Duration&apos; is minutes.</description>
        <inlineHelpText>Enter the duration in minutes.</inlineHelpText>
        <label>Wednesday Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_From_DT__c</fullName>
        <label>Wednesday From DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wednesday_From__c</fullName>
        <label>Wednesday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wednesday_To_DT__c</fullName>
        <label>Wednesday To DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wednesday_To__c</fullName>
        <label>Wednesday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>